// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Desktop Error page should render connection lost page 1`] = `
<div>
  <div
    class="box box--margin-top-6 box--margin-right-6 box--margin-left-6 box--display-flex box--flex-direction-column box--align-items-center box--text-align-center"
  >
    <svg
      fill="var(--color-error-default"
      height="64"
      viewBox="0 0 352 512"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
    <h4
      class="box box--margin-top-6 box--margin-bottom-6 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
    >
      MetaMask Desktop connection was lost
    </h4>
    <p
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--p typography--weight-normal typography--style-normal typography--color-text-default"
    >
      Please make sure you have the desktop app up and running or disable MetaMask Desktop.
    </p>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-open-or-download-mmd"
      >
        Open MetaMask Desktop
      </button>
    </div>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-disable-mmd"
      >
        Disable MetaMask Desktop
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop Error page should render critical error page 1`] = `
<div>
  <div
    class="box box--margin-top-6 box--margin-right-6 box--margin-left-6 box--display-flex box--flex-direction-column box--align-items-center box--text-align-center"
  >
    <svg
      fill="var(--color-error-default"
      height="64"
      viewBox="0 0 352 512"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
    <h4
      class="box box--margin-top-6 box--margin-bottom-6 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
    >
      MetaMask had trouble starting
    </h4>
    <p
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--p typography--weight-normal typography--style-normal typography--color-text-default"
    >
      This error could be intermittent, so try restarting the extension or disable MetaMask Desktop.
    </p>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-restart-mm"
      >
        Restart MetaMask
      </button>
    </div>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-disable-mmd"
      >
        Disable MetaMask Desktop
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop Error page should render default error page 1`] = `
<div>
  <div
    class="box box--margin-top-6 box--margin-right-6 box--margin-left-6 box--display-flex box--flex-direction-column box--align-items-center box--text-align-center"
  >
    <svg
      fill="var(--color-error-default"
      height="64"
      viewBox="0 0 352 512"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
    <h4
      class="box box--margin-top-6 box--margin-bottom-6 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
    >
      Something went wrong...
    </h4>
    <p
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--p typography--weight-normal typography--style-normal typography--color-text-default"
    >
      Check your MetaMask Desktop to restore connection
    </p>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-return-mm-home"
      >
        Return MetaMask Home
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop Error page should render desktop app outdated page 1`] = `
<div>
  <div
    class="box box--margin-top-6 box--margin-right-6 box--margin-left-6 box--display-flex box--flex-direction-column box--align-items-center box--text-align-center"
  >
    <svg
      fill="var(--color-error-default"
      height="64"
      viewBox="0 0 352 512"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
    <h4
      class="box box--margin-top-6 box--margin-bottom-6 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
    >
      MetaMask Desktop is outdated
    </h4>
    <p
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--p typography--weight-normal typography--style-normal typography--color-text-default"
    >
      Your MetaMask desktop app needs to be upgraded.
    </p>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-update-mmd"
      >
        Update MetaMask Desktop
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop Error page should render extension outdated page 1`] = `
<div>
  <div
    class="box box--margin-top-6 box--margin-right-6 box--margin-left-6 box--display-flex box--flex-direction-column box--align-items-center box--text-align-center"
  >
    <svg
      fill="var(--color-error-default"
      height="64"
      viewBox="0 0 352 512"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
    <h4
      class="box box--margin-top-6 box--margin-bottom-6 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
    >
      MetaMask Extension is outdated
    </h4>
    <p
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--p typography--weight-normal typography--style-normal typography--color-text-default"
    >
      Your MetaMask extension needs to be upgraded.
    </p>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-update-extension"
      >
        Update MetaMask Extension
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop Error page should render not found page 1`] = `
<div>
  <div
    class="box box--margin-top-6 box--margin-right-6 box--margin-left-6 box--display-flex box--flex-direction-column box--align-items-center box--text-align-center"
  >
    <svg
      fill="var(--color-error-default"
      height="64"
      viewBox="0 0 352 512"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
    <h4
      class="box box--margin-top-6 box--margin-bottom-6 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
    >
      MetaMask Desktop was not found
    </h4>
    <p
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--p typography--weight-normal typography--style-normal typography--color-text-default"
    >
      Please make sure you have the desktop app up and running.
    </p>
    <p
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--p typography--weight-normal typography--style-normal typography--color-text-default"
    >
      If you have no desktop app installed, please download it on the MetaMask website.
    </p>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-download-mmd"
      >
        Download MetaMask Desktop
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop Error page should render pairing key not match page 1`] = `
<div>
  <div
    class="box box--margin-top-6 box--margin-right-6 box--margin-left-6 box--display-flex box--flex-direction-column box--align-items-center box--text-align-center"
  >
    <svg
      fill="var(--color-error-default"
      height="64"
      viewBox="0 0 352 512"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
    <h4
      class="box box--margin-top-6 box--margin-bottom-6 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
    >
      MM Desktop is already paired
    </h4>
    <p
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--p typography--weight-normal typography--style-normal typography--color-text-default"
    >
      If you want to start a new pairing, please remove the current connection.
    </p>
    <a
      class="button btn-link desktop-pairing-warning__link"
      role="button"
      tabindex="0"
    >
      Go to Settings in MetaMask Desktop
    </a>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-navigate-settings"
      >
        Return to Settings Page
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop Error page should render route not found page 1`] = `
<div>
  <div
    class="box box--margin-top-6 box--margin-right-6 box--margin-left-6 box--display-flex box--flex-direction-column box--align-items-center box--text-align-center"
  >
    <svg
      fill="var(--color-error-default"
      height="64"
      viewBox="0 0 352 512"
      width="64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
    <h4
      class="box box--margin-top-6 box--margin-bottom-6 box--flex-direction-row typography typography--h4 typography--weight-bold typography--style-normal typography--color-text-default"
    >
      desktopRouteNotFoundErrorTitle
    </h4>
    <p
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography typography--p typography--weight-normal typography--style-normal typography--color-text-default"
    >
      desktopRouteNotFoundErrorDescription
    </p>
    <div
      class="box box--margin-top-6 box--flex-direction-row"
    >
      <button
        class="button btn--rounded btn-primary"
        id="desktop-error-button-navigate-settings"
      >
        Return to Settings Page
      </button>
    </div>
  </div>
</div>
`;
